# gcp-playground

./: .gitignore  Dockerfile  Dockerfile.auth  Dockerfile.fastapi  Dockerfile.frontend  Dockerfile.pubsub-relay  README.md  envoy-config.yaml  perf.py  requiremets-perf.txt  skaffold.yaml
apps/pubsub-3d-webapp/: .env  Dockerfile  build.sh  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.app.tsbuildinfo  tsconfig.node.tsbuildinfo
apps/pubsub-3d-webapp/public/: config.js
apps/pubsub-3d-webapp/scripts/: validate-scene-fixture.ts
apps/pubsub-3d-webapp/src/: App.tsx  SceneView.tsx  env.d.ts  schema.ts  styles.css  useMovementControls.ts  useSceneStream.ts
apps/pubsub-publisher-cpp/: CMakeLists.txt  CMakePresets.json  README.md  env.vars
apps/pubsub-publisher-cpp/include/: benchmark_runner.h  config.h  frame_source.h  game_state_manager.h  gcp_pubsub_publisher.h  input_command_bus.h  local_game_client.h  local_input_adapter.h  proto_to_scene_json.h  pubsub_publisher.h  remote_input_subscriber.h  scene_payload_generator.h  shared_memory_frame_source.h  shared_memory_state_buffer.h
apps/pubsub-publisher-cpp/proto/: game_state.proto  input_command.proto
apps/pubsub-publisher-cpp/src/: benchmark_runner.cc  config.cc  game_state_manager.cc  gcp_pubsub_publisher.cc  input_command_bus.cc  local_game_client.cc  local_input_adapter.cc  main.cc  proto_to_scene_json.cc  remote_input_subscriber.cc  scene_payload_generator.cc  shared_memory_frame_source.cc  shared_memory_state_buffer.cc
apps/pubsub-publisher-cpp/tests/: game_state_manager_input_test.cc  input_command_bus_test.cc  scene_adapter_invariant_test.cc
apps/pubsub-relay/: .env.example  build.sh  env.vars  package-lock.json  package.json
apps/pubsub-relay/scripts/: validate-scene-fixture.ts
apps/pubsub-relay/src/: broadcast-hub.ts  config.ts  index.ts  input-publisher.ts  input-schema.ts  message-source.ts  schema.ts
auth_service/: main.py  setup.py
carmonitor_deb/: .gitignore  Dockerfile  setup.py
carmonitor_deb/DEBIAN/: control  postinst  preerm
carmonitor_deb/carmonitor/: __init__.py  main.py
carmonitor_deb/etc/carmonitor/: config.yaml
carmonitor_deb/etc/systemd/system/: carmonitor.service
carmonitor_deb/scripts/: build.sh  cleanup.sh
chat-app/: app.html  config.py  handlers.py  main.py  requirements.txt  requiremets.txt  room_manager.py  schemas.py  websocket_server.py
chat_app/: setup.py
chat_app/app/: config.py  handlers.py  index.html  main.py  schemas.py  websocket_server.py
chat_app_fastapi/: README.md  requirements.txt  setup.py
chat_app_fastapi/app/: config.py  handlers.py  index.html  main.py  room_manager.py  websocket_server.py
docs/: pubsub-3d-throughput.md
frontend/: package-lock.json  package.json
frontend/src/: App.tsx
k8-manifests/dev-playground/: Kptfile  cloudrun.yaml
k8-manifests/dev-playground-auth-service/: Kptfile  cloudrun.yaml
k8-manifests/dev-playground-chat-app/: Kptfile  cloudrun.yaml
k8-manifests/dev-playground-chat-app-fastapi/: Kptfile  cloudrun.yaml
schemas/: scene-payload.schema.json
scratch/: main_with_pubsub.py  manager.py  pubsub.py
scripts/: build_push_pubsub_3d_images.sh  deploy.sh
secrets-manager-reader/: README.md  main.py  pyproject.toml
terraform/dev-playground/: LIVEKIT_SETUP_COMPLETE.md  README.md  artifact_registry_pubsub_3d.tf  backend.tf  firewall.tf  gke.tf  iam.tf  livekit-values.yaml  livekit.tf  main.tf  network-fix-daemonset.yaml  output.tf  providers.tf  pubsub_3d_infra.tf  pubsub_3d_stack.tf  redis.tf  repositories.tf  secrets.tf  ssl.tf  variables.tf
terraform/dev-playground/config/: static_config.yaml
terraform/dev-playground/services/: auth_service.yaml  chat-app-fastapi.yaml  chat-app.yaml
